--- a/WebApi.csproj
+++ b/WebApi.csproj
@@ -4,11 +4,13 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
-    <PackageReference Include="System.Net.Http" Version="4.3.4"/>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\translatorapp.DomainLayer\translatorapp.DomainLayer.csproj"/>
+    <Reference Include="translatorapp.DomainLayer">
+      <HintPath>..\translatorapp.DomainLayer\bin\Debug\netstandard2.0\translatorapp.DomainLayer.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
