Add usersContext and connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "server=BABABOOEY\\ARETSQL;security info=True;Integrated Security=SSPI;database=Ultron"
+  }
 }
