--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "server=BABABOOEY\\ARETSQL;security info=True;Integrated Security=SSPI;database=Ultron"
+    "Default": "server=BABABOOEY\\ARETSQL;Integrated Security=SSPI;database=Ultron"
   }
 }
